--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,8 +2,8 @@
   list-style: none;
   padding: 0;
   display: grid;
-  gap: 1rem;
-  grid-auto-rows: 22rem;
+  gap: 3rem;
+  grid-auto-rows: 20rem;
   grid-template-columns: repeat(auto-fill, minmax(min(100%, 15rem), 1fr));
 }
 
@@ -13,22 +13,24 @@
   text-align: center;
 }
 .card:hover {
-  filter: brightness(1.15);
   cursor: pointer;
 }
 .image {
-  max-width: 150px;
-  height: auto;
+  max-width: 250px;
+  min-width: 250px;
+  max-height: 250px;
+  min-height: 250px;
 }
 .types {
   color: #fff;
+  margin: 0;
   background-color: rgba(255, 255, 230, 0.3);
   margin-bottom: 4px;
   border-radius: 20px;
   text-align: center;
   padding: 2px 10px;
   text-transform: capitalize;
-  font-size: 14px;
+  font-size: 110%;
   place-self: flex-start;
 }
 .name {
@@ -38,4 +40,13 @@
   padding: 0;
   margin: 0;
   text-transform: capitalize;
+}
+.nav {
+  color: goldenrod;
+  padding: 10px;
+  background-color: #0b0d13;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 2rem;
 }
