--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: space-around;
   position: sticky;
+  z-index: 1;
   top: 0;
   background-color: rgba(0, 0, 0, 0.6);
   color: goldenrod;
